# lqos_shaped_sync

./: .dockerignore  .env.example  .gitignore  BARE_METAL_INSTALL.md  DOCKER_INSTALL.md  Dockerfile  FULL_DOCUMENTATION.md  GITHUB_DESCRIPTION.md  GIT_INSTALL.md  INSTALLATION.md  PACKAGE_NOTES.md  README.md  RELEASE_NOTES.md  ShapedDevices.csv.example  UNINSTALLATION.md  VERSION  app.py  app.py.pre_reports_route_fix  compose.preserve-existing.yaml  compose.yaml  config.json.example  docker-entrypoint.sh  install-baremetal.sh  install-from-github.sh  install-production-safe.sh  install.sh  requirements.txt  uninstall.sh  upgrade.sh
applier/: atomic_writer.py  backup.py  libreqos_runner.py  rollback.py
auth/: users.py
builders/: circuit_rows.py  network_json.py  node_tree.py  shaped_devices.py
collectors/: dhcp.py  hotspot.py  mikrotik_client.py  pppoe.py
docs/: ABOUT_MODULE_OPERATOR_GUIDE.md  AUTOSAVE_AND_ATOMIC_STATE.md  COMMANDS.md  COMMIT_AND_PUSH_GUIDE.md  DOCUMENTATION_INDEX.md  EXISTING_INSTALL_ADOPTION.md  GITHUB_INSTALL.md  MIKROTIK_SETUP.md  POLICY_PATH_REFERENCE.md  PRODUCTION_SAFE_INSTALL.md  REPOSITORY_RENAME.md  ROUTE_COMPATIBILITY.md  RUNTIME_RENAME_MIGRATION.md  RUST_CORE_MIGRATION.md  RUST_CORE_PROTOCOL.md  RUST_CORE_V02_TRUST_DIFF.md  RUST_CORE_V03_ATOMIC_STATE.md  RUST_CORE_V04_DAEMON.md  (+65 more)
engine/: audit.py  (+39 more)
rust/lqosync-core/: Cargo.toml  README.md
rust/lqosync-core/src/: apply_manifest.rs  authority_pilot.rs  authority_readiness.rs  circuits.rs  collector_authority_activation.rs  collector_authority_dry_run.rs  collector_authority_pilot.rs  collector_authority_pilot_execution.rs  collector_authority_pilot_result.rs  collector_authority_production_freeze.rs  collector_authority_promotion.rs  collector_authority_promotion_cutover.rs  collector_authority_runtime.rs  collector_bundle.rs  collector_run_cycle_shadow.rs  diff.rs  lib.rs  main.rs  policy.rs  routeros_api_codec.rs  routeros_api_frame.rs  routeros_api_reply.rs  routeros_auth_handshake.rs  routeros_auth_plan.rs  routeros_auth_session.rs  routeros_authenticated_read.rs  routeros_live_pilot.rs  routeros_offline_session.rs  routeros_plan.rs  routeros_read_pilot.rs  routeros_tcp_probe.rs  routeros_transport.rs  rust_apply_journal_rollback_authority_handoff.rs  rust_backend_api_handoff.rs  rust_circuit_builder_authority_handoff.rs  rust_full_backend_cutover_execution.rs  rust_full_backend_cutover_plan.rs  rust_full_backend_production_audit_sentinel.rs  rust_full_backend_production_cutover.rs  rust_full_backend_production_drift_monitor.rs  (+11 more)
(+104 files in other folders)
