[package]
name = "lqosync-core"
version = "1.4.0"
edition = "2021"
description = "Deterministic Rust safety core for LQoSync validation, diff, collector trust, atomic state operations, policy shadow evaluation, sync-plan authority gates, apply manifest previews, transaction rehearsal/execution, runtime self-test, transaction journal persistence, journal history/rollback planning, and Unix socket daemon support."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
