[package]
name = "lqosync-core"
version = "4.9.0"
edition = "2021"
description = "Deterministic Rust safety core for LQoSync validation, diff, collector trust, atomic state operations, policy shadow evaluation, sync-plan authority gates, apply manifest previews, transaction rehearsal/execution, runtime self-test, transaction journal persistence, journal history/rollback planning, collector-bundle parity reporting, collector authority manifest planning, run_cycle Rust-shadow reports, RouterOS collector planning, RouterOS read-result trust validation, RouterOS transport-session rehearsal, RouterOS fixture read pilot execution, RouterOS API sentence codec, RouterOS API reply decoder, RouterOS API binary frame codec, RouterOS offline auth handshake fixture, RouterOS authenticated-session contract, authority readiness scoring, and Unix socket daemon support."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
